# franka_simulation

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  build_cpp.sh  environment.yaml  environment_packages.txt  requirements.txt  setup.py  test_package.py
franka_valve/: __init__.py  eval_franka_valve.py  franka_simulation.py  train_franka_valve.py
franka_valve/assets/franka_emika_panda/: fr3.urdf
franka_valve/fr3_envs/: fr3_3d_test.py  fr3_6d_test.py  fr3_6d_train.py  fr3_full_action.py  fr3_tqc.py
franka_valve/fr3_envs/bases/: fr3.py  fr3_rpy.py
franka_valve/models/classifier/: classifier_rpy.py  classifier_tqc.py  model_cclk.pt
franka_valve/models/tqc/: functions.py  structures.py  tqc.py  trainer.py
franka_valve/utils/: find_libraries.py  rotations.py  tools.py
include/: controller.h  robotmodel.h
model/franka_emika_panda/: scene_valve (copy).xml
py_src/: MUJOCO_LOG.TXT  _fr3Env.py  fr3Env.py  franka_valve.py  migration_test.yml  simulate.py  train.py  train_test_fullaction.py  train_test_rpy.py
py_src/assets/franka_emika_panda/: mjinclude_handle.xml  scene_valve.xml
py_src/classifier/: model_cclk.pt
py_src/classifier/cclk/: model.pt
py_src/classifier/clk/: model.pt
py_src/fr3_envs/: fr3.py  fr3Env.py  fr3_3d_test.py  fr3_6d_test.py  fr3_6d_train.py  fr3_full_action.py  fr3_rpy.py  fr3_tqc.py
py_src/fr3_envs/bases/: fr3.py  fr3_rpy.py
py_src/franka_emika_panda/: fr3.urdf
py_src/model/franka_emika_panda/: mjinclude_fr3.xml
py_src/models/classifier/: model_clk.pt
py_src/tqc/: trainer.py
py_src/utils/: find_libraries.py  tqc_savemodel.py
simulate/: controller.cpp  main.cpp  robotmodel.cpp  trajectory.cpp
(+122 files in other folders)
